; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/dtv/extr_linux.c_dvb_set_cqam.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/dtv/extr_linux.c_dvb_set_cqam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@QAM_AUTO = common dso_local global i32 0, align 4
@DTV_DELIVERY_CQAM = common dso_local global i32 0, align 4
@DTV_CLEAR = common dso_local global i32 0, align 4
@DTV_DELIVERY_SYSTEM = common dso_local global i32 0, align 4
@SYS_DVBC_ANNEX_B = common dso_local global i32 0, align 4
@DTV_FREQUENCY = common dso_local global i32 0, align 4
@DTV_MODULATION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dvb_set_cqam(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = load i32, i32* @QAM_AUTO, align 4
  %11 = call i32 @dvb_parse_modulation(i8* %9, i32 %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* @DTV_DELIVERY_CQAM, align 4
  %14 = call i64 @dvb_find_frontend(i32* %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %27

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* @DTV_CLEAR, align 4
  %20 = load i32, i32* @DTV_DELIVERY_SYSTEM, align 4
  %21 = load i32, i32* @SYS_DVBC_ANNEX_B, align 4
  %22 = load i32, i32* @DTV_FREQUENCY, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @DTV_MODULATION, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @dvb_set_props(i32* %18, i32 4, i32 %19, i32 0, i32 %20, i32 %21, i32 %22, i32 %23, i32 %24, i32 %25)
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %17, %16
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @dvb_parse_modulation(i8*, i32) #1

declare dso_local i64 @dvb_find_frontend(i32*, i32) #1

declare dso_local i32 @dvb_set_props(i32*, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
